# avr-context-switch

./: CMakeLists.txt  CMakePresets.json  Os.h  OsConfig.h  Port.h  README.md  Scheduler.h  Tasks.h  main.cpp  ninja.dot  startup.s
Os/: CMakeLists.txt  ContextSwitchMacros.h  OsConfig.h  OsHeap.cpp  OsHeap.h  Scheduler.cpp  Scheduler.h  Tasks.h
cmake/: Toolchain_AVR.cmake  etl.cmake
